--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
   <body>
     <h1>The Learn Enough Story</h1>
  <p>
-     Learn Enough to Be Dangerous is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take command of your computer and get it to do your bidding. This includes everything from command lines and coding to guessing keyboard shortcuts, Googling error messages, and knowing when to just reboot the darn thing. We believe there are <strong>at least a billion</strong> people who can benefit from learning technical sophistication, probably more. To join our movement, <a href="https://learnenough.com/email">sign up for our official email list</a>.
+     Learn Enough to Be Dangerous is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take command of your computer and get it to do your bidding. This includes everything from command lines and coding to guessing keyboard shortcuts, Googling error messages, and knowing when to just reboot the darn thing. We believe there are <strong>at least a billion</strong> people who can benefit from learning technical sophistication, probably more. To join our movement, <a href="https://learnenough.com/email">sign up for our official email list</a> now.
   </p>
 
 
+<!-- 
+   <p>
+     <a href="https://twitter.com/learnenough" target="_blank"
+     rel="noopener" style="text-decoration: none;">
+       <img src="images/small_twitter_logo.png">
+     </a>
+     You should follow Learn Enough on Twitter
+     <a href="https://twitter.com/learnenough"
+        target="_blank" rel="noopener">here</a>.
+   </p>
+ -->
   <p>
      HTML was created by the original "web developer", computer scientist
      <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
@@ -35,7 +46,7 @@
    <h3>Michael Hartl</h3>
 <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
      alt="Michael Hartl">
-     
+
    <p>
      Michael is the creator of the <a href="https://www.railstutorial.org/">
      Ruby on Rails Tutorial</a> and principal author of the
