--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8">
   </head>
   <body>
+
+
+      <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
     <h1>The Learn Enough Story</h1>
  <p>
      Learn Enough to Be Dangerous is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take command of your computer and get it to do your bidding. This includes everything from command lines and coding to guessing keyboard shortcuts, Googling error messages, and knowing when to just reboot the darn thing. We believe there are <strong>at least a billion</strong> people who can benefit from learning technical sophistication, probably more. To join our movement, <a href="https://learnenough.com/email">sign up for our official email list</a> now.
@@ -29,7 +36,7 @@
      share pictures of his cat, but it would be cool if it were.
    </p>
 
-   <img src="images/kitten.jpg" alt="An adorable kitten">
+   <img src="images/batman.png" alt="Batman inside Van Gogh Eyes" style="max-height: 300px; max-width: 300px;">
 
 
 
