--- a/tags.html
+++ b/tags.html
@@ -6,9 +6,15 @@
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+
     <h1>Important HTML tags</h1>
 
-    <img src="images/chess_battle.png" alt="Tagged Astronaut" style="max-height: 300px; max-width: 300px;">
+    <img src="images/chess_battle.png" alt="chess war" style="max-height: 300px; max-width: 300px;">
 
     <p>
       This page is designed as a quick reference for some of the common tags
