Finish the sample website

--- a/index.html
+++ b/index.html
@@ -3,32 +3,23 @@
   <head>
     <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
+   <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
 
-      <div>
-      <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
-    </div>
+    <div class="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="tags.html" class="nav-spacing">HTML Tags</a>
+    <a href="moby_dick.html" class ="nav-spacing">Moby Dick</a>
+  </div>
+
     <h1>The Learn Enough Story</h1>
  <p>
      Learn Enough to Be Dangerous is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take command of your computer and get it to do your bidding. This includes everything from command lines and coding to guessing keyboard shortcuts, Googling error messages, and knowing when to just reboot the darn thing. We believe there are <strong>at least a billion</strong> people who can benefit from learning technical sophistication, probably more. To join our movement, <a href="https://learnenough.com/email">sign up for our official email list</a> now.
   </p>
 
 
-<!-- 
-   <p>
-     <a href="https://twitter.com/learnenough" target="_blank"
-     rel="noopener" style="text-decoration: none;">
-       <img src="images/small_twitter_logo.png">
-     </a>
-     You should follow Learn Enough on Twitter
-     <a href="https://twitter.com/learnenough"
-        target="_blank" rel="noopener">here</a>.
-   </p>
- -->
   <p>
      HTML was created by the original "web developer", computer scientist
      <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
@@ -38,7 +29,20 @@
 
    <img src="images/batman.png" alt="Batman inside Van Gogh Eyes" style="max-height: 300px; max-width: 300px;">
 
+  <h2>Quotations</h2>
 
+  <p>
+    In addition to hosting most of the world's supply of kitten videos, the
+    Web is also full of inspiring quotes, perhaps none more so than this one:
+  </p>
+
+  <blockquote style="padding: 2px 20px; background: #bbb;">
+    <p>
+      <em>Don't believe every quote you read on the Internet.</em>
+      <br>
+      —The Batman
+    </p>
+  </blockquote>
 
     <h2>Background</h2>
 
@@ -48,7 +52,7 @@
     Other related tutorials can be found at <a href="https://www.learnenough.com/">learnenough.com</a>.
   </p>
 
-    <h2>Founders</h2>
+    <h2 id ="founders">Founders</h2>
 
    <h3>Michael Hartl</h3>
 <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
