--- a/moby_dick.html
+++ b/moby_dick.html
@@ -3,16 +3,15 @@
   <head>
     <title>Moby Dick</title>
     <meta charset="utf-8">
+       <link rel="stylesheet" href="css/main.css">
   </head>
 <body>
-  <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-            <a href="moby_dick.html">Moby Dick</a>
-
-    </div>
-  <!-- much here to be styled, will do so in last section -->
-  <header>
+  <div class="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="tags.html" class="nav-spacing">HTML Tags</a>
+    <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+  </div>
+  <header style= "margin: 0 0 80px; text-align: center;">
     <h1>A Softcover Book Report</h1>
     <h2>Moby-Dick (or, The Whale)</h2>
   </header>
@@ -32,15 +31,16 @@
   </div>
 
   <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-    <img src="images/whales.png" style="max-height: 200px; max-width: 200px;">
+    <img src="images/whales.png" style="width: 600px; display: block; margin: 0 auto">
   </a>
-    <div>
+    <div style="width: 500px; margin: 20px 0px 0px 80px  ; padding: 20px 0px 0px 0px;
+  background-color: #fafafa;">
 
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank" rel="noopener">
-        <img src="images/moby.png" alt="Moby Dick" style="max-height: 200px; max-width: 200px;">
+        <img src="images/moby.png" alt="Moby Dick" style="max-height: 150px; max-width: 250px;  float: left; margin: 0px 10p" >
       </a>
 
       <p>
@@ -51,9 +51,10 @@
           by Herman Melville begins with these immortal words:
       </p>
 
-     <blockquote>
+     <blockquote style = "font-style: italic; font-size: 20px;">
        <p>
-         <span>Call me Ishmael.</span> Some years ago–never mind how long
+         <span style="font-style: normal; font-size: 24px; font-weight: bold;
+color: #ff0000;"> Call me Ishmael.</span> Some years ago–never mind how long
          precisely–having little or no money in my purse, and nothing
          particular to interest me on shore, I thought I would sail about a
          little and see the watery part of the world. It is a way I have of
@@ -69,6 +70,8 @@
      </p>
    </div>
 
+   <p>
+
    <h4>Our top 3 favorite things about Moby Dick</h4>
 
 <ol>
@@ -76,6 +79,7 @@
   <li>Salty sailors</li>
   <li>The names "Queequeg" and "Starbuck"</li>
 </ol>
+</p>
 
 <h4>Other things about Moby Dick</h4>
 
