--- a/tags.html
+++ b/tags.html
@@ -3,18 +3,21 @@
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
+  <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
-    </div>
+     <div class="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="tags.html" class="nav-spacing">HTML Tags</a>
+    <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+  </div>
 
     <h1>Important HTML tags</h1>
 
     <img src="images/chess_battle.png" alt="chess war" style="max-height: 300px; max-width: 300px;">
+
+
 
     <p>
       This page is designed as a quick reference for some of the common tags
